--- a/soluna-mobile/android/src/main/res/values/strings.xml
+++ b/soluna-mobile/android/src/main/res/values/strings.xml
@@ -1,3 +1,69 @@
 <resources>
     <string name="app_name">Soluna</string>
+
+    <string name="title_home">@string/app_name</string>
+    <string name="title_settings">Settings</string>
+    <string name="title_locations">Locations</string>
+    <string name="title_reminders">Reminders</string>
+    <string name="title_addlocation">Add Location</string>
+    <string name="title_locationdetail">Location Detail</string>
+
+    <string name="sunmoontimes_midnight">Midnight</string>
+    <string name="sunmoontimes_noon">Noon</string>
+
+    <string name="action_back">Back</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_submit">Submit</string>
+
+    <string name="location_format_pair">%1$1.3f°%2$s, %3$1.3f°%4$s</string>
+    <string name="location_format_single">%1$1.3f°%2$s</string>
+    <string name="location_abbr_north">N</string>
+    <string name="location_abbr_south">S</string>
+    <string name="location_abbr_east">E</string>
+    <string name="location_abbr_west">W</string>
+
+    <string name="home_menu_settings">@string/title_settings</string>
+    <string name="home_content_empty">No location selected!</string>
+    <string name="home_times_none">None</string>
+    <string name="home_times_sunrise">Sunrise: %s</string>
+    <string name="home_times_sunset">Sunset: %s</string>
+    <string name="home_times_moonrise">Moonrise: %s</string>
+    <string name="home_times_moonset">Moonset: %s</string>
+    <string name="home_coordinates">Location: %s</string>
+    <string name="home_timezone">Time zone: %s</string>
+
+    <string name="settings_action_locations">@string/title_locations</string>
+    <string name="settings_action_reminders">@string/title_reminders</string>
+
+    <string name="locations_action_add">Add location</string>
+    <string name="locations_action_delete">Delete location</string>
+    <string name="locations_confirm_remove">Are you sure you want to remove location %s</string>
+
+    <string name="reminders_action_add">Add reminder</string>
+    <string name="reminders_action_disable">Disable reminder</string>
+    <string name="reminders_action_enable">Enable reminder</string>
+    <string name="reminders_action_delete">Delete reminder</string>
+    <string name="reminders_description">%1$s minutes before %2$s</string>
+    <string name="reminders_confirm_remove">Are you sure you want to remove this reminder?</string>
+
+    <string name="addlocation_action_geocode">Search by address</string>
+    <string name="addlocation_action_devicelocation">Get location from device</string>
+    <string name="addlocation_input_label">Location Name</string>
+    <string name="addlocation_input_latitude">Latitude</string>
+    <string name="addlocation_input_longitude">Longitude</string>
+    <string name="addlocation_input_timezone">Time Zone</string>
+    <string name="addlocation_input_address">Address</string>
+
+    <string name="locationdetail_action_unselect">Unselect location</string>
+    <string name="locationdetail_action_select">Select location</string>
+    <string name="locationdetail_latitude">Latitude: %s</string>
+    <string name="locationdetail_longitude">Longitude: %s</string>
+    <string name="locationdetail_timezone">Time Zone: %s</string>
+    <string name="locationdetail_sunrise">Sunrise: %s</string>
+    <string name="locationdetail_sunset">Sunset: %s</string>
+    <string name="locationdetail_moonrise">Moonrise: %s</string>
+    <string name="locationdetail_moonset">Moonset: %s</string>
+    <string name="locationdetail_invalid">Location is invalid!</string>
+
 </resources>
